--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="mycard">
       <div class="happy">
         <img
-          src="C:\Users\USER\OneDrive\Desktop\projects\race\profilecard\me.jpgC:\Users\USER\OneDrive\Desktop\projects\race\profilecard\me.jpg"
+          src="./me.jpg"
           alt="Profile Picture"
         />
         <h2 class="text-xl font-semibold mt-4">Yassir Zein</h2>
